--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
+    "feathers-client": "^2.4.0",
     "rxjs": "^5.4.2",
+    "socket.io-client": "^2.0.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/socket.io-client": "^1.4.31",
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
