--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "angular-4-data-table": "^0.2.3",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
     "feathers-client": "^2.4.0",
+    "has-chinese": "^0.1.0",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.5",
     "rxjs": "^5.4.2",
     "socket.io-client": "^2.0.3",
+    "wordcount": "^1.1.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
