--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
     "feathers-client": "^2.4.0",
+    "fuzzy": "^0.1.3",
     "has-chinese": "^0.1.0",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.5",
