--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fuzzy": "^0.1.3",
     "has-chinese": "^0.1.0",
     "jquery": "^3.2.1",
+    "ng2-bootstrap-modal": "^1.0.1",
     "popper.js": "^1.12.5",
     "rxjs": "^5.4.2",
     "socket.io-client": "^2.0.3",
