Added server code to repository

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -25,6 +25,18 @@
     "angular-4-data-table": "^0.2.3",
     "angular-sortablejs": "^2.1.0",
     "bootstrap": "^4.0.0-beta",
+    "body-parser": "^1.18.2",
+    "feathers": "^2.2.2",
+    "feathers-authentication": "^1.2.7",
+    "feathers-authentication-jwt": "^0.3.2",
+    "feathers-authentication-local": "^0.4.4",
+    "feathers-errors": "^2.9.2",
+    "feathers-hooks": "^2.1.0",
+    "feathers-memory": "^1.2.1",
+    "feathers-nedb": "^2.7.0",
+    "feathers-rest": "^1.8.0",
+    "feathers-socketio": "^2.0.0",
+    "nedb": "^1.8.0",
     "core-js": "^2.4.1",
     "feathers-client": "^2.4.0",
     "fuzzy-search": "^2.0.1",
