--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "postinstall": "ng build --prod",
+    "postinstall": "ng build",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -74,5 +74,9 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2"
+  },
+  "engines": {
+    "node": "6.11.3",
+    "npm": "3.10.10"
   }
 }
