Fixed missing package: serve-favicon

--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.4.2",
-    "@angular/compiler-cli": "^4.2.4",
     "@angular/animations": "^4.2.4",
+    "@angular/cli": "1.4.2",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
+    "@angular/compiler-cli": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
@@ -27,33 +27,34 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angular-4-data-table": "^0.2.3",
     "angular-sortablejs": "^2.1.0",
-    "bootstrap": "^4.0.0-beta",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0-beta",
+    "core-js": "^2.4.1",
     "feathers": "^2.2.2",
     "feathers-authentication": "^1.2.7",
     "feathers-authentication-jwt": "^0.3.2",
     "feathers-authentication-local": "^0.4.4",
+    "feathers-client": "^2.4.0",
     "feathers-errors": "^2.9.2",
     "feathers-hooks": "^2.1.0",
     "feathers-memory": "^1.2.1",
     "feathers-nedb": "^2.7.0",
     "feathers-rest": "^1.8.0",
     "feathers-socketio": "^2.0.0",
-    "nedb": "^1.8.0",
-    "core-js": "^2.4.1",
-    "feathers-client": "^2.4.0",
     "fuzzy-search": "^2.0.1",
     "has-chinese": "^0.1.0",
     "jquery": "^3.2.1",
+    "nedb": "^1.8.0",
     "ng2-bootstrap-modal": "^1.0.1",
     "ng2-toastr": "^4.1.2",
     "parse-numeric-range": "0.0.2",
     "popper.js": "^1.12.5",
     "rxjs": "^5.4.2",
+    "serve-favicon": "^2.4.5",
     "socket.io-client": "^2.0.3",
     "sortablejs": "^1.6.1",
-    "wordcount": "^1.1.1",
     "typescript": "~2.3.3",
+    "wordcount": "^1.1.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
