--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
-    "angular-4-data-table": "^0.2.3",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
+    "angular-4-data-table": "0.2.3",
     "angular-sortablejs": "^2.1.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta",
