--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/cli": "1.4.2",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
-    "angular-4-data-table": "0.2.3",
+    "@angular/animations": "^6.1.10",
+    "@angular/cli": "^6.2.9",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
+    "@ng-bootstrap/ng-bootstrap": "^2.2.2",
+    "angular-4-data-table": "^0.4.6",
     "angular-sortablejs": "^2.1.0",
+    "angular5-data-table": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
@@ -46,24 +47,26 @@
     "jquery": "^3.2.1",
     "nedb": "^1.8.0",
     "ng2-bootstrap-modal": "^1.0.1",
-    "ng2-toastr": "^4.1.2",
+    "ng6-toastr-notifications": "^1.0.4",
     "parse-numeric-range": "0.0.2",
     "popper.js": "^1.12.5",
-    "rxjs": "^5.4.2",
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
     "serve-favicon": "^2.4.5",
     "socket.io-client": "^2.0.3",
     "sortablejs": "^1.6.1",
-    "typescript": "~2.3.3",
+    "typescript": "~2.9.2",
     "wordcount": "^1.1.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/language-service": "^4.2.4",
+    "@angular-devkit/build-angular": "^0.8.9",
+    "@angular/language-service": "^6.1.10",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "@types/socket.io-client": "^1.4.31",
-    "codelyzer": "~3.1.1",
+    "codelyzer": "^5.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
