--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.10",
-    "@angular/cli": "^6.2.9",
     "@angular/common": "^6.1.10",
     "@angular/compiler": "^6.1.10",
     "@angular/compiler-cli": "^6.1.10",
     "@angular/core": "^6.1.10",
+    "@angular/fire": "^5.2.3",
     "@angular/forms": "^6.1.10",
     "@angular/http": "^6.1.10",
     "@angular/platform-browser": "^6.1.10",
@@ -26,7 +26,7 @@
     "@angular/router": "^6.1.10",
     "@ng-bootstrap/ng-bootstrap": "^2.2.2",
     "angular-4-data-table": "^0.4.6",
-    "angular-sortablejs": "^2.1.0",
+    "angular-sortablejs": "^2.7.0",
     "angular5-data-table": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta",
@@ -42,25 +42,28 @@
     "feathers-nedb": "^2.7.0",
     "feathers-rest": "^1.8.0",
     "feathers-socketio": "^2.0.0",
+    "firebase": "^7.6.0",
     "fuzzy-search": "^2.0.1",
     "has-chinese": "^0.1.0",
     "jquery": "^3.2.1",
     "nedb": "^1.8.0",
     "ng2-bootstrap-modal": "^1.0.1",
     "ng6-toastr-notifications": "^1.0.4",
+    "ngx-sortablejs": "^3.1.3",
     "parse-numeric-range": "0.0.2",
     "popper.js": "^1.12.5",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
     "serve-favicon": "^2.4.5",
     "socket.io-client": "^2.0.3",
-    "sortablejs": "^1.6.1",
+    "sortablejs": "^1.10.1",
     "typescript": "~2.9.2",
     "wordcount": "^1.1.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.8.9",
+    "@angular/cli": "^8.3.20",
     "@angular/language-service": "^6.1.10",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
