--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
     "@angular/core": "^8.2.14",
     "@angular/fire": "^5.2.3",
     "@angular/forms": "^8.2.14",
-    "@angular/http": "^6.1.10",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
-    "@ng-bootstrap/ng-bootstrap": "^2.2.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "angular-4-data-table": "^0.4.6",
     "angular-sortablejs": "^2.7.0",
     "angular5-data-table": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta",
-    "core-js": "^2.4.1",
+    "core-js": "^3.5.0",
     "feathers": "^2.2.2",
     "feathers-authentication": "^1.2.7",
     "feathers-authentication-jwt": "^0.3.2",
@@ -39,12 +39,12 @@
     "feathers-client": "^2.4.0",
     "feathers-errors": "^2.9.2",
     "feathers-hooks": "^2.1.0",
-    "feathers-memory": "^1.2.1",
-    "feathers-nedb": "^2.7.0",
+    "feathers-memory": "^4.1.0",
+    "feathers-nedb": "^5.1.0",
     "feathers-rest": "^1.8.0",
     "feathers-socketio": "^2.0.0",
     "firebase": "^7.6.0",
-    "fuzzy-search": "^2.0.1",
+    "fuzzy-search": "^3.0.2",
     "has-chinese": "^0.1.0",
     "jquery": "^3.2.1",
     "nedb": "^1.8.0",
@@ -58,29 +58,29 @@
     "serve-favicon": "^2.4.5",
     "socket.io-client": "^2.0.3",
     "sortablejs": "^1.10.1",
-    "typescript": "~3.5.3",
+    "typescript": "^3.5.3",
     "wordcount": "^1.1.1",
-    "zone.js": "^0.9.1"
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
     "@angular/cli": "^8.3.20",
     "@angular/language-service": "^8.2.14",
-    "@types/jasmine": "~2.5.53",
+    "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "~12.12.21",
     "@types/socket.io-client": "^1.4.31",
     "codelyzer": "^5.2.0",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.3.2"
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-cli": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.5.4",
+    "tslint": "~5.20.1"
   },
   "engines": {
     "node": "6.11.3",
